Recycler view init

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">Material Tabs</string>
+    <string name="app_name">O-messenger</string>
 
     <string name="action_settings">Settings</string>
 
